regression-tests/test-results/clang-18/pure2-bugfix-for-max-munch.cpp.output
pure2-bugfix-for-max-munch.cpp2:2:33: error: a space is required between a right angle bracket and an equals sign (use '> =')
    2 | auto main() -> int { v<cpp2::i32>==v<cpp2::i32>;  }
      |                                 ^~
      |                                 > =
pure2-bugfix-for-max-munch.cpp2:2:34: warning: self-comparison always evaluates to true [-Wtautological-compare]
    2 | auto main() -> int { v<cpp2::i32>==v<cpp2::i32>;  }
      |                                  ^
pure2-bugfix-for-max-munch.cpp2:2:34: warning: equality comparison result unused [-Wunused-comparison]
    2 | auto main() -> int { v<cpp2::i32>==v<cpp2::i32>;  }
      |                      ~~~~~~~~~~~~^~~~~~~~~~~~~~
pure2-bugfix-for-max-munch.cpp2:2:34: note: use '=' to turn this equality comparison into an assignment
    2 | auto main() -> int { v<cpp2::i32>==v<cpp2::i32>;  }
      |                                  ^~
      |                                  =
2 warnings and 1 error generated.
